set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
find_package(Boost COMPONENTS unit_test_framework REQUIRED)

if(Boost_FOUND)
	include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src ${Boost_INCLUDE_DIRS})
	link_directories(${CMAKE_BINARY_DIR}/lib ${Boost_LIBRARY_DIRS})
	file(GLOB headers *.h)
	set(tests odbc sqlite)
	foreach(test ${tests})
		set(test_name ${test}_test)
		add_executable(${test_name} ${test_name}.cpp main.cpp ${headers})
		if (NANODBC_STATIC)
			target_link_libraries(${test_name} nanodbc ${Boost_LIBRARIES} ${ODBC_LIBRARIES})
		else()
			target_link_libraries(${test_name} nanodbc ${Boost_LIBRARIES})
		endif()
		add_test(NAME ${test_name} COMMAND ${test_name})
	endforeach()
else()
	message(FATAL_ERROR "can not find boost")
endif()
